--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,9 @@
 @import url(header.css);
+@import url(hero.css);
 
 body {
     background-color: rgb(10, 10, 10);
+    color: white;
+
+    margin: 0 auto;
 }
