--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,4 @@
 header {
-    background-color: rgb(15, 15, 15);
-
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -14,6 +12,20 @@ header nav {
     gap: 40px;
 }
 
-header nav:nth-child(2) {
-    margin-top: 2px;
+.nav-left div {
+    transition: .5s;
+
+    &:hover {
+        color: hsl(0, 0%, 75%);
+        cursor: pointer;
+    }
+}
+
+.nav-right div svg {
+    transition: .5s;
+
+    &:hover {
+        color: hsl(0, 0%, 75%);
+        cursor: pointer;
+    }
 }
